--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,13 +33,13 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 20
-          cache: 'npm'
+          # Pas de cache car pas de package-lock.json
 
       - name: Install & build frontend
         run: |
-  cd frontend
-  npm install
-  npm run build
+          cd frontend
+          npm install
+          npm run build
 
   # 3. Vérifie que le Docker image se build (simule CasaOS)
   docker-build:
