--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,15 +2,16 @@
   "name": "nook-frontend",
   "private": true,
   "version": "0.1.0",
-  "type": "module",        
+  "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite dev",
     "build": "vite build",
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@sveltejs/kit": "^2.0.0",
     "svelte": "^4.0.0",
-    "@sveltejs/vite-plugin-svelte": "^3.0.0",
+    "@sveltejs/adapter-static": "^3.0.0",
     "vite": "^5.0.0"
   }
 }
