--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,9 +9,10 @@
     "preview": "vite preview"
   },
   "devDependencies": {
-    "@sveltejs/kit": "^2.0.0",
-    "svelte": "^4.0.0",
-    "@sveltejs/adapter-static": "^3.0.0",
+    "@sveltejs/kit": "^2.10.0",
+    "svelte": "^5.0.0",
+    "@sveltejs/adapter-static": "^3.1.0",
+    "@sveltejs/vite-plugin-svelte": "^4.0.0",
     "vite": "^5.0.0"
   }
 }
