--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -1,10 +1,17 @@
 [package]
 name = "nook-backend"
-version = "0.1.0"
+version = "0.1.1"
 edition = "2021"
 
 [dependencies]
 axum = "0.7"
 tokio = { version = "1.0", features = ["full"] }
 tower-http = { version = "0.6", features = ["fs", "trace"] }
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite"] }
 uuid = { version = "1.0", features = ["v4"] }
+tokio-tungstenite = "0.23"
+futures-util = "0.3"
+tower-service = "0.3"
+http = "1.0"
