--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,7 +1,7 @@
 {
   "name": "nook-frontend",
   "private": true,
-  "version": "0.1.0",
+  "version": "0.1.1",
   "type": "module",
   "scripts": {
     "dev": "vite dev",
@@ -13,6 +13,7 @@
     "svelte": "^5.0.0",
     "@sveltejs/adapter-static": "^3.0.5",
     "@sveltejs/vite-plugin-svelte": "^4.0.0",
-    "vite": "^5.0.0"
+    "vite": "^5.0.0",
+    "libsodium-wrappers": "^0.7.13"
   }
 }
