--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -4,10 +4,10 @@ version = "0.1.1"
 edition = "2021"
 
 [dependencies]
-axum = { version = "0.7", features = ["ws", "multipart"] }
+axum = { version = "0.7", features = ["ws", "multipart", "macros"] }
 tokio = { version = "1.0", features = ["full"] }
 tokio-stream = "0.1"
-tower-http = { version = "0.6", features = ["fs"] }  # ← 'limit' n'existe pas, 'fs' oui
+tower-http = { version = "0.6", features = ["fs"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite"] }
