--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -17,6 +17,6 @@ futures-util = "0.3"
 tower-service = "0.3"
 http = "1.0"
 
-# 🔒 Fixes pour éviter edition2024
+# 🔒 Forcer les versions compatibles avec edition 2021
 home = "=0.5.11"
 base64ct = "=1.7.3"
