--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -10,7 +10,7 @@ tokio-stream = "0.1"
 tower-http = { version = "0.6", features = ["fs"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite"] }
+sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "macros", "chrono"] }
 uuid = { version = "1.0", features = ["v4"] }
 tokio-tungstenite = "0.23"
 futures-util = "0.3"
