--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -4,19 +4,18 @@ version = "0.1.1"
 edition = "2021"
 
 [dependencies]
-axum = { version = "0.7", features = ["ws", "multipart", "macros"] }
+axum = { version = "0.7", features = ["ws", "multipart"] }
 tokio = { version = "1.0", features = ["full"] }
 tokio-stream = "0.1"
 tower-http = { version = "0.6", features = ["fs"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "macros", "chrono"] }
+sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite"] }
 uuid = { version = "1.0", features = ["v4"] }
-tokio-tungstenite = "0.23"
 futures-util = "0.3"
 tower-service = "0.3"
 http = "1.0"
 
-# 🔒 Forcer les versions compatibles avec edition 2021
+# 🔒 Fixes pour éviter edition2024
 home = "=0.5.11"
 base64ct = "=1.7.3"
