--- a/.github/workflows/ci-new.yml
+++ b/.github/workflows/ci-new.yml
@@ -19,6 +19,11 @@ jobs:
       - name: Installer la toolchain Rust
         uses: dtolnay/rust-toolchain@stable
 
+      - name: Verify SQLx query cache is up-to-date
+  run: |
+    cargo install sqlx-cli
+    cargo sqlx prepare --workspace --check -- --all-targets
+
       # 3. Mettre en cache les dépendances (accélère énormément les builds)
       - name: Cache des dépendances Cargo
         uses: actions/cache@v4
