--- a/.github/workflows/prepare-sqlx.yml
+++ b/.github/workflows/prepare-sqlx.yml
@@ -22,7 +22,9 @@ jobs:
           # Vérifier que les migrations existent (pour débogage)
           ls -la backend/migrations/
           # Crée une base SQLite temporaire
-          DATABASE_URL="sqlite:data/temp.db" sqlx database create
+
+cd backend    
+DATABASE_URL="sqlite:data/temp.db" sqlx database create
           # Exécute les migrations en spécifiant explicitement le dossier
           DATABASE_URL="sqlite:data/temp.db" sqlx migrate run --source ./backend/migrations
         
