--- a/.github/workflows/prepare-sqlx.yml
+++ b/.github/workflows/prepare-sqlx.yml
@@ -1,40 +1,48 @@
 name: Generate SQLx Cache
 
-on:
-  workflow_dispatch:  # Permet de lancer manuellement
+on: workflow_dispatch
 
 jobs:
-  prepare:
+  sqlx-cache:
     runs-on: ubuntu-latest
+    
     steps:
       - name: Checkout
         uses: actions/checkout@v4
         
-      - name: Setup Rust
-        uses: dtolnay/rust-toolchain@stable
-        
-      - name: Install SQLx CLI
-        run: cargo install sqlx-cli
-        
-      - name: Create SQLite database and run migrations
+      - name: Setup
         run: |
+          cd backend
+          cargo --version
+          rustc --version
+          
+      - name: Install dependencies
+        run: |
+          cd backend
+          cargo install sqlx-cli --no-default-features --features sqlite
+          
+      - name: Create database
+        run: |
+          cd backend
           mkdir -p data
-          # Vérifier que les migrations existent (pour débogage)
-          ls -la backend/migrations/
-          # Crée une base SQLite temporaire
-
-cd backend    
-DATABASE_URL="sqlite:data/temp.db" sqlx database create
-          # Exécute les migrations en spécifiant explicitement le dossier
-          DATABASE_URL="sqlite:data/temp.db" sqlx migrate run --source ./backend/migrations
-        
-      - name: Generate SQLx offline cache
+          sqlite3 data/temp.db "VACUUM;"
+          
+      - name: Prepare offline cache
         run: |
-          DATABASE_URL="sqlite:data/temp.db" cargo sqlx prepare --workspace -- --all-targets
-        
-      - name: Commit and push the cache
+          cd backend
+          DATABASE_URL="sqlite:data/temp.db" cargo sqlx prepare
+          
+      - name: Commit changes
         run: |
-          git config --global user.email "github-actions@github.com"
-          git config --global user.name "GitHub Actions"
-          git add .sqlx/
-          git diff --staged --quiet || (git commit -m "chore: generate SQLx query cache" && git push)
+          # Ajouter le cache SQLx
+          git add backend/.sqlx/
+          
+          # Vérifier s'il y a des changements
+          if git diff --staged --quiet; then
+            echo "Pas de changements"
+          else
+            git config --global user.email "actions@github.com"
+            git config --global user.name "github-actions"
+            git commit -m "Update SQLx cache"
+            git push
+          fi
