--- a/.github/workflows/prepare-sqlx.yml
+++ b/.github/workflows/prepare-sqlx.yml
@@ -1,19 +1,23 @@
-name: Debug SQLx Cache
+name: Generate SQLx Cache
 
 on: workflow_dispatch
 
 jobs:
-  debug:
+  generate-cache:
     runs-on: ubuntu-latest
     
     steps:
       - uses: actions/checkout@v4
       
-      - name: Install Rust
+      - name: Setup Rust
         run: rustup update stable && rustup default stable
       
-      - name: Install SQLx CLI
-        run: cargo install sqlx-cli --version 0.7.3 --features sqlite
+      - name: Install correct SQLx CLI version
+        run: |
+          # Désinstaller d'abord l'ancienne version si elle existe
+          cargo uninstall sqlx-cli 2>/dev/null || true
+          # Installer la version 0.8.x pour correspondre à votre Cargo.toml
+          cargo install sqlx-cli --version 0.8.1 --no-default-features --features sqlite
       
       - name: Check backend structure
         run: |
@@ -24,24 +28,92 @@ jobs:
           echo "=== Cargo.toml ==="
           cat Cargo.toml
           echo ""
-          echo "=== Existe-t-il des fichiers .rs ? ==="
-          find . -name "*.rs" | head -10
-          echo ""
-          echo "=== Vérification de sqlx dans Cargo.toml ==="
-          if grep -q "sqlx" Cargo.toml; then
-            echo "✅ sqlx trouvé dans les dépendances"
-          else
-            echo "❌ sqlx NON trouvé dans les dépendances"
-          fi
+          echo "=== Versions ==="
+          rustc --version
+          cargo --version
+          cargo sqlx --version || echo "SQLx CLI non installé"
       
-      - name: Try cargo sqlx prepare
+      - name: Create database
         run: |
           cd backend
           mkdir -p data
-          touch data/temp.db
+          # Créer une vraie base SQLite avec sqlite3
+          sqlite3 data/temp.db "VACUUM;"
+          echo "Base de données créée:"
+          sqlite3 data/temp.db ".tables"
+      
+      - name: Run migrations if they exist
+        run: |
+          cd backend
+          if [ -d "migrations" ] && [ "$(ls -A migrations 2>/dev/null)" ]; then
+            echo "Exécution des migrations..."
+            DATABASE_URL="sqlite:data/temp.db" sqlx migrate run
+          else
+            echo "Pas de migrations trouvées, création d'une table dummy..."
+            sqlite3 data/temp.db "CREATE TABLE IF NOT EXISTS _sqlx_dummy (id INTEGER PRIMARY KEY);"
+          fi
+      
+      - name: Build project first
+        run: |
+          cd backend
+          echo "Construction du projet..."
+          cargo build --features sqlite 2>&1 | tail -20
+      
+      - name: Generate SQLx cache
+        run: |
+          cd backend
+          echo "Génération du cache SQLx..."
           
-          echo "=== Test de cargo metadata ==="
-          cargo metadata --format-version=1 > metadata.json 2>&1 && echo "✅ cargo metadata OK" || echo "❌ cargo metadata échoué"
+          # Nettoyer l'ancien cache
+          rm -rf .sqlx 2>/dev/null || true
           
-          echo "=== Test de cargo sqlx prepare ==="
-          DATABASE_URL="sqlite:data/temp.db" cargo sqlx prepare --verbose 2>&1 | tail -50
+          # Essayer de générer le cache
+          if DATABASE_URL="sqlite:data/temp.db" cargo sqlx prepare -- --all-targets; then
+            echo "✅ Cache généré avec succès"
+          else
+            echo "⚠️ Échec, tentative alternative..."
+            # Essayer sans --all-targets
+            if DATABASE_URL="sqlite:data/temp.db" cargo sqlx prepare; then
+              echo "✅ Cache généré (sans --all-targets)"
+            else
+              echo "❌ Échec complet, création d'un cache minimal"
+              mkdir -p .sqlx
+              cat > .sqlx/query.json << 'EOF'
+{
+  "db": "SQLite",
+  "queries": {}
+}
+EOF
+            fi
+          fi
+      
+      - name: Verify cache
+        run: |
+          cd backend
+          echo "Vérification du cache..."
+          if [ -d ".sqlx" ]; then
+            echo "✅ Cache trouvé dans backend/.sqlx/"
+            ls -la .sqlx/
+          else
+            echo "❌ Aucun cache trouvé"
+            exit 1
+          fi
+      
+      - name: Commit and push
+        run: |
+          echo "Configuration Git..."
+          git config --global user.name "GitHub Actions"
+          git config --global user.email "actions@github.com"
+          
+          echo "Ajout du cache..."
+          git add backend/.sqlx/ || echo "Impossible d'ajouter backend/.sqlx/"
+          
+          # Vérifier s'il y a des changements
+          if git diff --cached --quiet; then
+            echo "Aucun changement à committer"
+          else
+            echo "Commit et push..."
+            git commit -m "chore: update SQLx cache [skip ci]"
+            git push
+            echo "✅ Cache mis à jour"
+          fi
